--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
 		  <meta name="viewport" content="width=device-width, initial-scale=1">
 		  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/css/bootstrap.min.css">
 		  <link rel="stylesheet" type="text/css" href="main.css">
-  	<title>Handlebars Store</title>
+  	<title>Pictiche</title>
 	</head>
 	<body>
+	<form role="form">
+		  <div class="form-group">
+		    <label for="exampleInputEmail1">Search</label>
+		    <input type="search" class="form-control" id="photo-search" placeholder="Search">
+		  </div>
+		  <button type="submit" id="photo-search-submit" class="btn btn-default">Submit</button>
+	</form>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script src="utility.js" type="text/javascript"></script>
 		<script src="api-key.js" type="text/javascript"></script>
-		<script src="main.js" type="text/javascript"></script>	
+		<script src="model.js" type="text/javascript"></script>	
 	</body>
 </html>
