--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 		  </div>
 		  <button type="submit" id="photo-search-submit" class="btn btn-default">Submit</button>
 	</form>
+	<div id="tagCloud"></div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script src="utility.js" type="text/javascript"></script>
 		<script src="api-key.js" type="text/javascript"></script>
+		<script src="raw-data.js" type="text/javascript"></script>
 		<script src="model.js" type="text/javascript"></script>	
 	</body>
 </html>
