--- a/index.html
+++ b/index.html
@@ -8,15 +8,40 @@
   	<title>Pictiche</title>
 	</head>
 	<body>
-	<form role="form">
-		  <div class="form-group">
-		    <label for="exampleInputEmail1">Search</label>
-		    <input type="search" class="form-control" id="photo-search" placeholder="Search">
-		  </div>
-		  <button type="submit" id="photo-search-submit" class="btn btn-default">Submit</button>
-	</form>
-	<div id="tagCloud"></div>
+	<div class="row">
+		<form class = "col-md-3" role="form">
+			  <div class="form-group">
+			    <label for="exampleInputEmail1">Search</label>
+			    <input type="search" class="form-control" id="photo-search" placeholder="Search">
+			  </div>
+			  <button type="submit" id="photo-search-submit" class="btn btn-default">Submit</button>
+		</form>
+	</div>
+	<div class="row"> 
+		<div class = "col-md-3" id="cloud-container"></div>
+		<div class = "col-md-9" id="image-container"></div>
+	</div>
+
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
+		<script id="tag-cloud" type="text/x-handlebars-template">
+		<ul class="list-inline">
+			{{#each this}}
+				<li class="list-item">
+					<a class ="btn btn-info" href="#" style="font-size:{{this}}">{{@key}}</a>
+				</li>
+			{{/each}}
+		</ul>
+		</script>
+		<script id="image-template" type="text/x-handlebars-template">
+		<ul class="list-inline">
+			{{#each this}}
+				<li class="list-item">
+					<img class="image" src={{imagePath}}>
+				</li>
+			{{/each}}
+		</ul>
+		</script>
 		<script src="utility.js" type="text/javascript"></script>
 		<script src="raw-data.js" type="text/javascript"></script>
 		<script src="model.js" type="text/javascript"></script>	
