--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 	</div> <!--#container -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
+		<script id="background-image" type="text/x-handlebars-template"></script>
+		
 		<script id="tag-cloud" type="text/x-handlebars-template">
 		<ul class="list-inline">
 			{{#each this}}
