--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		  <meta name="viewport" content="width=device-width, initial-scale=1">
 		  <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/css/bootstrap.min.css">
 		  <link rel="stylesheet" type="text/css" href="main.css">
+		  <link rel="stylesheet" type="text/css" href="gallery.css">
   	<title>Pictiche</title>
 	</head>
 	<body>
@@ -13,7 +14,7 @@
 			<div class ="background" id="background">
 
 			<img id="pastiche-background" class="background-image" src=""> 
-			<div>
+	   		<div>
 				<img class="background-image" src="images/home-gallery/001.jpg">
 			</div>
 			
@@ -25,6 +26,7 @@
 			</div>
 
 			</div>
+			
 			<div class="col-md-12 content" id="content">
 				<div class="row">
 					<div class="sidebar col-md-3">
@@ -49,6 +51,9 @@
 			</div> <!--#content -->
 			
 		</div>
+		<div id="overlay">
+			
+		</div>
 	</div> <!--#container -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
@@ -58,7 +63,7 @@
 		<ul class="list-inline">
 			{{#each this}}
 				<li class="list-item">
-					<a class ="btn btn-default" href="#" style="font-size:{{this}}">{{@key}}</a>
+					<a class ="btn btn-default tag" href="#" style="font-size:{{this}}">{{@key}}</a>
 				</li>
 			{{/each}}
 		</ul>
@@ -72,8 +77,21 @@
 			{{/each}}
 		</ul>
 		</script>
+		<script id="ligthbox-template" type="text/x-handlebars-template">
+			<div id="lightbox">
+				<h1 class='lightbox'>{{title}}</h1>
+				<img class='lightbox' id="lightbox-image" src="{{imagePath}}"/>
+				<p class='lightbox'>{{description}}</p>
+				<a class='lightbox' id="close" href="#">Close</a> 
+			</div>
+
+				
+
+		</script>
 		<script src="utility.js" type="text/javascript"></script>
 		<script src="raw-data.js" type="text/javascript"></script>
 		<script src="model.js" type="text/javascript"></script>	
+		<script src="view.js" type="text/javascript"></script>	
+
 	</body>
 </html>
